<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <ImageView
        android:id="@+id/fullImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:layout_marginTop="10dp"
        android:src="@color/black" />

    <TextView
        android:id="@+id/textViewFullCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:text="@string/coin"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:text="@string/slash"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/textViewFullCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="@string/coin"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewFullPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/coin"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/minimum_by_day"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewByMinDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="205dp"
            android:layout_marginTop="60dp"
            android:text="@string/coin"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="110dp"
            android:text="@string/maximum_by_day"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewByMaxDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="205dp"
            android:layout_marginTop="110dp"
            android:text="@string/coin"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="160dp"
            android:layout_marginStart="10dp"
            android:text="@string/last_deal"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewLastDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="120dp"
            android:layout_marginTop="160dp"
            android:text="@string/coin"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="210dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewFullUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="100dp"
            android:layout_marginTop="210dp"
            android:text="@string/coin"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="#63000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:background="#63000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="150dp"
            android:background="#63000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="200dp"
            android:background="#63000000" />

    </androidx.cardview.widget.CardView>

</FrameLayout>